# Novapad

./: .gitignore  .gitignore.bac  CHANGELOG.md  CHANGELOG_ES.md  CHANGELOG_IT.md  CHANGELOG_PT.md  CHANGELOG_VI.md  Cargo.toml  Cargo.toml.bac  LICENSE  MANUAL_TESTS.md  README.md  README_IT.md  build.rs  cargo_test_list.txt  cargo_test_run.txt  check_braces.py  check_error.txt  check_error_details.txt  check_error_loop.txt  check_final.txt  check_output.txt  check_output_2.txt  check_result.txt  ciao.txt  claude.md  conversazione.txt  debug_fetch.rs  err.txt  filedocapertocometxt.txt  fix_all_missing_if.py  fix_missing_if.py  fix_syntax.py  fix_syntax_err.py  fix_syntax_final.py  fix_syntax_minimal.py  fix_syntax_safe.py  fix_syntax_v2.py  fix_syntax_v3.py  fix_syntax_v4.py  (+11 more)
.claude/: settings.local.json
.github/workflows/: aggiornarelease.yml  ci.yml
i18n/: en.json  es.json  feed_en.txt  feed_es.txt  feed_it.txt  feed_pt.txt  feed_vi.txt  it.json  pt.json  vi.json
lib64/: brotlicommon.lib  brotlidec.lib  brotlienc.lib  cares.lib  libcurl.lib  libcurl_imp.lib  nghttp2.lib  nghttp3.lib  ngtcp2.lib  ngtcp2_crypto_boringssl.lib  ssl.lib  zlib.lib  zstd.lib
lib64/lib/cmake/CURL/: CURLConfigVersion.cmake  CURLTargets.cmake
lib64/lib/pkgconfig/: libcares.pc  libcurl.pc
lib64/share/man/man1/: curl-config.1  curl.1  runtests.1  testcurl.1  wcurl.1
lib64/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  (+467 more)
packager/nsis/: installer.nsi
packager/wix/: main.wxs
sapi4_bridge/: Cargo.toml  build_release.bat  stderr.txt  stdout.txt  tentativi.txt  test_input.txt
sapi4_bridge/src/: main.rs
scripts/: build_msi.ps1  move_msi.ps1
service/: Ethin.txt  integra.txt  log.txt
src/: accessibility.rs  audio_capture.rs  audio_player.rs  audio_utils.rs  bookmarks.rs  com_guard.rs  conpty.rs  curl_client.rs  editor_manager.rs  embedded_deps.rs  embedded_secrets.rs  file_handler.rs  i18n.rs  macros.rs  main.rs  menu.rs  mf_encoder.rs  podcast_recorder.rs  podcast_recorder_avi.rs  sapi4_engine.rs  sapi5_engine.rs  screen_recorder.rs  search.rs  settings.rs  text_ops.rs  tts_engine.rs  updater.rs  wikipedia.rs  wiktionary.rs  win_ocr.rs
src/app_windows/: about_window.rs  audiobook_window.rs  batch_audiobooks_window.rs  bookmarks_window.rs  dictionary_window.rs  find_in_files_window.rs  go_to_time_window.rs  help_window.rs  marker_select_window.rs  mod.rs  options_window.rs  podcast_chapters_window.rs  podcast_save_window.rs  podcast_window.rs  podcasts_window.rs  prompt_window.rs  rss_window.rs  tts_tuning_window.rs  wikipedia_window.rs  wiktionary_window.rs  youtube_transcript_window.rs
src/spellcheck/: mod.rs  windows_spellcheck.rs
src/tools/: fetch_fn.txt  reader.rs  rss.rs  rss_new.rs
