[package]
name = "novapad"
version = "0.1.0"
edition = "2024"
authors = ["Ambrogio Riili"]
description = "A modern Notepad with PDF support and TTS capabilities."

[package.metadata.packager]
product_name = "Novapad"
identifier = "com.ambrogioriili.novapad"
version = "0.1.0"
authors = ["Ambrogio Riili"]
publisher = "Ambrogio Riili"
description = "A modern Notepad with PDF support and TTS capabilities."
formats = ["nsis", "wix"]

[[package.metadata.packager.binaries]]
path = "novapad"
main = true

[package.metadata.packager.nsis]
languages = ["Italian", "English"]

[dependencies]
windows = { version = "0.54", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Power",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Controls_RichEdit",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
encoding_rs = "0.8"
docx-rs = "0.4"
pdf-extract = "0.7"
printpdf = "0.7"
calamine = "0.25"
cfb = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rodio = "0.18"
sha2 = "0.10"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
epub = "2.1"
