[package]
name = "novapad"
version = "0.5.7"
edition = "2024"
authors = ["Ambrogio Riili"]
description = "A modern Notepad with PDF, DOCX, XLS and EPUB support and TTS capabilities."

[package.metadata.packager]
product_name = "Novapad"
identifier = "com.ambrogioriili.novapad"
authors = ["Ambrogio Riili"]
publisher = "Ambrogio Riili"
description = "A modern Notepad with PDF, DOCX, XLS and EPUB support and TTS capabilities."
formats = ["nsis", "wix"]

[[package.metadata.packager.file_associations]]
extensions = ["txt"]
description = "Novapad Text Document"
name = "Novapad Text Document"

[[package.metadata.packager.file_associations]]
extensions = ["doc", "docx"]
description = "Novapad Word Document"
name = "Novapad Word Document"

[[package.metadata.packager.file_associations]]
extensions = ["epub"]
description = "Novapad EPUB Document"
name = "Novapad EPUB Document"

[[package.metadata.packager.file_associations]]
extensions = ["pdf"]
description = "Novapad PDF Document"
name = "Novapad PDF Document"

[[package.metadata.packager.file_associations]]
extensions = ["xls"]
description = "Novapad Excel Document"
name = "Novapad Excel Document"

[[package.metadata.packager.file_associations]]
extensions = ["html", "htm"]
description = "Novapad HTML Document"
name = "Novapad HTML Document"

[[package.metadata.packager.file_associations]]
extensions = ["ppt", "pptx"]
description = "Novapad PowerPoint Document"
name = "Novapad PowerPoint Document"

[[package.metadata.packager.binaries]]
path = "novapad"
main = true

[package.metadata.packager.nsis]
languages = ["Italian", "English"]
template = "packager/nsis/installer.nsi"

[package.metadata.packager.wix]
template = "packager/wix/main.wxs"

[dependencies]
windows = { version = "0.54", features = [
  "implement",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Performance",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Speech",
  "Win32_Media_Multimedia",
  "Win32_Media_MediaFoundation",
  "Win32_Storage_FileSystem",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Controls_RichEdit",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
encoding_rs = "0.8"
docx-rs = "0.4"
pdf-extract = "0.7"
printpdf = "0.7"
calamine = "0.25"
cfb = "0.7"
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rodio = "0.18"
sha2 = "0.10"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
epub = "2.1"
yt-transcript-rs = "0.1.8"
zip = "0.6"
feed-rs = "1.3"
scraper = "0.19"

[features]
portable = []

[profile.release]
opt-level = 3          # MASSIME performance
lto = true             # ottimizzazione cross-crate
codegen-units = 1      # migliora performance
panic = "abort"        # meno overhead a runtime
debug = 0
