[package]
name = "sapi4_bridge"
version = "0.1.0"
edition = "2021"
[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "objbase", "oleauto", "winerror", "combaseapi"] }
widestring = "1.1.0"
windows = { version = "0.54", features = [
  "Win32_Media_Audio",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com",
] }
